--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
-
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+    <head>
+        <meta charset="utf-8">
+        <title>Sef Meme Generator</title>
+        <script defer src="src/index.js" charset="utf-8"></script>
+    </head>
+    <body>
+        <div id="quote">
+            <!--Sef Quote Here-->
+        </div>
+        <button id="give-meme">Generate Sef</button>
+        <div id="sef-output">
+            <!--Sef Meme Here-->
+        </div>
+    </body>
+</html>
