reformat js source

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>Sef Meme Generator</title>
-    <script defer src="src/index.js" charset="utf-8"></script>
+    <script defer src="index.js" charset="utf-8"></script>
     <link rel="stylesheet" type="text/css" href="normalise.css">
 </head>
 
