--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <h1>
         Sef Meme Generator
     </h1>
-    <div id="quote">
-        <!--Sef Quote Here-->
+    <div id="message">
+        <!--Sef message Here-->
     </div>
     <button id="give-meme">Generate Sef</button>
     <div id="sef-output">
