changed to kanye

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h1>
         Sef Meme Generator
     </h1>
-    <div id="message">
+    <div id="quote">
         <!--Sef message Here-->
     </div>
     <button id="give-meme">Generate Sef</button>
