--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </h1>
     <div id="quote">
         <!--Sef message Here-->
-    </div>
+    </div><br>
     <button id="give-meme">Generate Sef</button>
     <div id="sef-output">
         <!--Sef Meme Here-->
